# regatta-analyser

./: .gitignore  Dockerfile  LICENSE  README.md  setup.cfg  test.py
data/: metabase.db.mv.db  regatta_data.duckdb
data/input/: ORC_Speed_Guide_Ref_04340002PIL.csv  avavoistlus_2024_05_04.csv  kolmak-2023-09-07.csv  kolmak-2023-10-04.csv  kolmak-2024-05-08.csv  kolmak-2024-05-15.csv  kolmak-2024-05-22.csv  kolmak-2024-06-05.csv  kolmak-2024-06-12.csv  mv-2024-07-15.csv  mv-2024-07-16-1.csv  mv-2024-07-16-2.csv  mv-2024-07-18.csv  mv-2024-07-20.csv
data/raw-data/: kolmap-2023-09-06.gpx  kolmap-2023-09-27.gpx  kolmap-2023-10-04.gpx
input_logs/: kolmak-27-09.csv
regatta_analyser/: __init__.py  __main__.py  analyse.py  utils.py
src/regatta_analyser/: __main__.py  analyse.py  entities.py  orc_model.py  preprocess_logs.py  regatta_data.py  utils.py  weather_analyser.py
src/regatta_analyser/old_code/: analyse.py
