[metadata]
name = regatta_analyser
version = 0.1
author = Siim Tolk
description = Offline Regatta Performance Analysis
readme = README.md
url = https://github.com/siimtolk/regatta-analyser
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:
install_requires =
    duckdb>=0.9.1

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    regatta-analyser = regatta_analyser.__main__:main